# gemm-metal

./: Cargo.toml  README.md
examples/: basic.rs  bench.rs
src/: candle.rs  dot_product.metal  lib.rs  utils.rs
